글 사진 등 수정

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -76,8 +76,8 @@
 			</article>
 
 			<article class="card-content">
-				<h2>제목</h2>
-				<p>콘텐츠</p>
+				<h2>서울의 전통과 현대가 어우러진 홈스테이 체험</h2>
+				<p>안녕하세요! 서울의 중심에서 전통과 현대 문화를 함께 체험할 수 있는 홈스테이 프로그램에 여러분을 초대합니다. 이 프로그램을 통해 한국의 역사적인 궁궐 방문, 전통 시장 탐방, 그리고 현대적인 강남 지역의 밤문화까지 다양한 체험을 할 수 있습니다. 서울의 한 가정과 함께 생활하며 진정한 한국의 가정 문화와 요리를 경험해보세요. 매주 주말에는 한복을 입고 경복궁을 방문하는 특별한 체험도 제공됩니다!</p>
 				<div class="card-content-footer">
 					<p>#태그 #태그 </p>
 					<p>$999,999</p>
@@ -91,8 +91,8 @@
 			</article>
 
 			<article class="card-content">
-				<h2>제목</h2>
-				<p>콘텐츠</p>
+				<h2>부산의 해안가에서 즐기는 홈스테이</h2>
+				<p>부산의 아름다운 해안가에서 특별한 홈스테이를 경험해보세요. 부산의 유명한 해운대와 광안리 해변을 방문하며, 해산물 시장에서 신선한 해산물도 맛볼 수 있습니다. 부산의 전통 가정집에서 홈스테이를 하며, 한국의 해양 문화와 지역 특색을 가까이에서 체험할 수 있습니다. 주말에는 부산의 유명한 템플스테이 프로그램에 참여하여 명상과 함께 한국의 불교 문화를 경험하는 시간도 가질 수 있습니다.</p>
 				<div class="card-content-footer">
 					<p>#태그 #태그 </p>
 					<p>$999,999</p>
@@ -115,8 +115,8 @@
 			</article>
 
 			<article class="card-content">
-				<h2>제목</h2>
-				<p>콘텐츠</p>
+				<h2>전주 한옥마을에서의 전통적 홈스테이</h2>
+				<p>전주 한옥마을의 고즈넉한 분위기 속에서 진정한 한국의 전통을 체험하는 홈스테이 프로그램에 여러분을 초대합니다. 전주의 전통 한옥에서 머물며 한국의 역사와 문화를 깊이 있게 체험할 수 있습니다. 전주 비빔밥과 한지 만들기 체험, 그리고 전통 차 시음과 같은 다양한 문화 활동을 통해 한국의 전통을 몸소 느낄 수 있습니다. 또한, 한옥마을 주변의 고택과 전통 공예품 가게를 탐방하며 전주만의 매력을 발견할 수 있습니다.</p>
 				<div class="card-content-footer">
 					<p>#태그 #태그 </p>
 					<p>$999,999</p>
@@ -130,8 +130,8 @@
 			</article>
 
 			<article class="card-content">
-				<h2>제목</h2>
-				<p>콘텐츠</p>
+				<h2>서울의 전통과 현대가 어우러진 홈스테이 체험</h2>
+				<p>안녕하세요! 서울의 중심에서 전통과 현대 문화를 함께 체험할 수 있는 홈스테이 프로그램에 여러분을 초대합니다. 이 프로그램을 통해 한국의 역사적인 궁궐 방문, 전통 시장 탐방, 그리고 현대적인 강남 지역의 밤문화까지 다양한 체험을 할 수 있습니다. 서울의 한 가정과 함께 생활하며 진정한 한국의 가정 문화와 요리를 경험해보세요. 매주 주말에는 한복을 입고 경복궁을 방문하는 특별한 체험도 제공됩니다!</p>
 				<div class="card-content-footer">
 					<p>#태그 #태그 </p>
 					<p>$999,999</p>
