--- a/src/main/resources/templates/program/list.html
+++ b/src/main/resources/templates/program/list.html
@@ -84,6 +84,7 @@
 				<div class="content-article-footer">
 					<p>#태그 #태그 </p>
 					<p>$999,999</p>
+<!--					<p th:text="${programList.price}">price</p>-->
 				</div>
 			</article>
 		</div>
