--- a/src/main/resources/templates/member/loginForm.html
+++ b/src/main/resources/templates/member/loginForm.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns="http://www.thymeleaf.org">
+<html xmlns:th="thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="utf-8">
     <title>CultureStay 로그인</title>
@@ -67,7 +68,7 @@
         <input type="password" name="password" id="password" placeholder="비밀번호">
         <input type="submit" value="로그인">
         <div class="login-help">
-            <a href="#">회원가입</a> |
+            <a th:href="@{/member/join}" th:text="회원가입">회원가입</a> |
             <a href="#">비밀번호 찾기</a>
         </div>
     </form>
