프로그램리스트 input순으로

--- a/src/main/resources/templates/program/list.html
+++ b/src/main/resources/templates/program/list.html
@@ -33,6 +33,8 @@
 				   th:text="${programList.title}"></a>
 			</td>
 			<td th:text="${programList.hits}"></td>
+			<td th:text="${programList.inputdate}"></td>
+
 		</tr>
 	</table>
 	
