--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -55,9 +55,9 @@
 				<input type="text" placeholder="프로그램 검색" aria-label="프로그램">
 
 				<!-- 검색 버튼 -->
-				<button type="submit" aria-label="검색">
+				<input type="submit" aria-label="검색">
 					<span class="icon-search"><i class="fas fa-search"></i></span> <!-- Font Awesome 검색 아이콘 -->
-				</button>
+				</input>
 			</div>
 		</div>
 	</section>
