--- a/src/main/resources/templates/program/list.html
+++ b/src/main/resources/templates/program/list.html
@@ -137,26 +137,28 @@
 		<!-- 검색폼 -->
 
 	<section class="search-section">
+	<form id="pagingForm" method="get" th:action="@{/program/list}">
 		<div class="header-container header-bottom">
 			<div class="search-bar">
 				<!-- 지역 입력란 -->
-				<input type="text" placeholder="지역 검색" aria-label="지역">
+				<input type="text"  th:value="${address}" placeholder="지역 검색" aria-label="지역">
 
 				<!-- 체크인 날짜 선택 -->
-				<input type="date" aria-label="체크인 날짜">
+				<input type="date" th:value="${start_date}" aria-label="체크인 날짜">
 
 				<!-- 체크아웃 날짜 선택 -->
-				<input type="date" aria-label="체크아웃 날짜">
+				<input type="date" th:value="${end_date}" aria-label="체크아웃 날짜">
 
 				<!-- 프로그램 입력란 -->
-				<input type="text" placeholder="프로그램 검색" aria-label="프로그램">
+				<input type="text" th:value="${searchWord}" placeholder="프로그램 검색" aria-label="프로그램">
 
 				<!-- 검색 버튼 -->
-				<button type="submit" aria-label="검색">
+				<input type="submit" aria-label="검색" >
 					<span class="icon-search"><i class="fas fa-search"></i></span> <!-- Font Awesome 검색 아이콘 -->
-				</button>
+				</input>
 			</div>
 		</div>
+	</form>
 	</section>
 
 <script th:src="@{/js/script.js}"></script>
