--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -55,9 +55,9 @@
 				<input type="text" placeholder="프로그램 검색" aria-label="프로그램">
 
 				<!-- 검색 버튼 -->
-				<input type="submit" aria-label="검색">
+				<button type="submit" onclick="showMessage()" aria-label="검색">
 					<span class="icon-search"><i class="fas fa-search"></i></span> <!-- Font Awesome 검색 아이콘 -->
-				</input>
+				</button>
 			</div>
 		</div>
 	</section>
@@ -146,6 +146,13 @@
 </main>
 
 <footer th:replace="layouts/footer::footer"></footer>
+
+<script>
+	// JavaScript 함수 정의
+    function showMessage() {
+        alert('버튼이 클릭되었습니다!');
+    }
+</script>
 
 </body>
 </html>
