--- a/src/main/resources/static/css/header_style.css
+++ b/src/main/resources/static/css/header_style.css
@@ -79,7 +79,7 @@ footer {
     outline: none; /* 포커스 아웃라인 제거 */
 }
 
-.search-bar button {
+button {
     border: none; /* 버튼 테두리 제거 */
     background-color: var(--primary-color); /* 버튼 배경 색상 빨간색=#ff385c;*/
     color: white; /* 버튼 텍스트 색상 */
@@ -89,8 +89,12 @@ footer {
     outline: none; /* 포커스 아웃라인 제거 */
 }
 
-.search-bar button:hover {
+button:hover {
     background-color: var(--secondary-color); /* 버튼 호버 효과 */
+}
+
+.button-right {
+    text-align: right;
 }
 
 .search-bar .icon-search i {
