이미지 업로드 성공. 코드 정리 및 uuid 추가 필요

--- a/src/main/resources/templates/jk/test.html
+++ b/src/main/resources/templates/jk/test.html
@@ -56,6 +56,7 @@
 <script>
 	CKEDITOR.replace("contents", {
 		//filebrowserUploadMethod :'form',
+		uploadUrl: "/image/drag",  // 이게 드래그 드롭을 위한 URL
 		filebrowserUploadUrl:  "/image/upload",
 		height: 500, // 에디터 높이를 500px로 설정
 	});
