--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -42,22 +42,23 @@
 	<section class="search-section">
 		<div class="header-container header-bottom">
 			<div class="search-bar">
+				<form id="pagingForm" method="get" th:action="@{/program/list}">
 				<!-- 지역 입력란 -->
-				<input type="text" placeholder="지역 검색" aria-label="지역">
+				<input type="text" name="address" placeholder="지역 검색" aria-label="지역">
 
 				<!-- 체크인 날짜 선택 -->
-				<input type="date" aria-label="체크인 날짜">
+				<input type="date" name="start_date" aria-label="체크인 날짜">
 
 				<!-- 체크아웃 날짜 선택 -->
-				<input type="date" aria-label="체크아웃 날짜">
+				<input type="date" name="end_date" aria-label="체크아웃 날짜">
 
 				<!-- 프로그램 입력란 -->
-				<input type="text" placeholder="프로그램 검색" aria-label="프로그램">
+				<input type="text" name="searchWord" placeholder="프로그램 검색" aria-label="프로그램">
 
 				<!-- 검색 버튼 -->
 				<button type="submit" onclick="showMessage()" aria-label="검색">
 					<span class="icon-search"><i class="fas fa-search"></i></span> <!-- Font Awesome 검색 아이콘 -->
-				</button>
+				</button></form>
 			</div>
 		</div>
 	</section>
