--- a/src/main/resources/templates/jk/test.html
+++ b/src/main/resources/templates/jk/test.html
@@ -56,7 +56,7 @@
 <script>
 	CKEDITOR.replace("contents", {
 		//filebrowserUploadMethod :'form',
-		uploadUrl: "/image/drag",  // 이게 드래그 드롭을 위한 URL
+		uploadUrl: "/image/upload",  // 이게 드래그 드롭을 위한 URL
 		filebrowserUploadUrl:  "/image/upload",
 		height: 500, // 에디터 높이를 500px로 설정
 	});
