--- a/src/main/resources/templates/program/apply.html
+++ b/src/main/resources/templates/program/apply.html
@@ -6,5 +6,23 @@
 </head>
 <body>
 <h2>프로그램 신청화면</h2>
+
+<table>
+	<tr>
+			<th>start_date</th>
+		
+			<td>
+				<pre th:text="${start_date}"></pre>
+			</td>
+		</tr>
+		
+		<tr>
+			<th>end_date</th>
+		
+			<td>
+				<pre th:text="${end_date}"></pre>
+			</td>
+		</tr>
+</table>
 </body>
 </html>
