ckeditor로 저장한 글 불러오기

--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -92,7 +92,7 @@
 
 			<article class="content-article">
 <!--				<h2>제목</h2>-->
-				<p class="board-to-detail clickable" th:data-boardnum="${board.boardnum}" th:utext="${board.contents}">콘텐츠</p>
+				<p class="board-to-detail clickable" th:data-boardnum="${board.boardnum}" th:text="${board.contents}">콘텐츠</p>
 				<div class="content-article-footer">
 					<p>#태그 #태그 </p>
 				</div>
