--- a/src/main/resources/templates/program/apply.html
+++ b/src/main/resources/templates/program/apply.html
@@ -24,5 +24,28 @@
 			</td>
 		</tr>
 </table>
+<br>
+<h2>checklist</h2>
+<form th:action="@{/program/apply}" method="post">
+
+	<div>
+		<h4>1. 일번질문</h4>		
+		<input type = "radio" name = "one" value = "1"> yes
+		<input type = "radio" name = "one" value = "0"> no
+	</div>
+	<div>
+		<h4>2. 이번질문</h4>		
+		<input type = "radio" name = "two" value = "1"> yes
+		<input type = "radio" name = "two" value = "0"> no
+	</div>
+	
+		<input type = "text" name = "note" value = "비고">
+<br>
+<input type="submit" value="저장"> 
+
+</form>
+
+
+
 </body>
 </html>
