ckeditor로 저장한 글 불러오기

--- a/src/main/resources/static/css/header_style.css
+++ b/src/main/resources/static/css/header_style.css
@@ -2,6 +2,7 @@
     --primary-color: #1F9CB3; /* 주 색상 */
     --secondary-color: #DF8664; /* 보조 색상 */
 
+    --grey-color: #808080;
     --lightGrey-color: #ECECEC; /* 보조 색상 */
 
     --accent-color: #E91E63;  /* 강조 색상 */
