--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -92,11 +92,13 @@
 
 			<article class="content-article">
 <!--				<h2>제목</h2>-->
-				<p class="board-to-detail clickable" th:data-boardnum="${board.boardnum}">
-					<span th:utext="${#strings.replace(board.contents, '\n', '<br>')}"></span>
-				</p>
+				<div>
+					<p class="board-to-detail clickable truncate-contents"
+					   th:text="${board.contents}" th:data-boardnum="${board.boardnum}"></p>
+				</div>
 				<div class="content-article-footer">
-					<p>#태그 #태그 </p>
+					<a class="tag clickable">#태그1</a>
+					<a class="tag clickable">#태그2</a>
 				</div>
 			</article>
 		</div>
@@ -112,5 +114,8 @@
 <footer th:replace="layouts/footer::footer"></footer>
 
 <script th:src="@{/js/script.js}"></script>
+<script>
+	document.addEventListener('DOMContentLoaded', truncateContent);
+</script>
 </body>
 </html>
