프로그램 리스트

--- a/src/main/resources/static/css/main_style_test.css
+++ b/src/main/resources/static/css/main_style_test.css
@@ -168,6 +168,11 @@
 
 .content-article-footer {
     display: flex;
+    justify-content: space-between;
+}
+
+.tags {
+    display: flex;
 }
 
 .tag {
