--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -97,8 +97,10 @@
 					   th:text="${board.contents}" th:data-boardnum="${board.boardnum}"></p>
 				</div>
 				<div class="content-article-footer">
-					<a class="tag clickable">#태그1</a>
-					<a class="tag clickable">#태그2</a>
+					<div class="tags">
+						<a class="tag clickable">#태그1</a>
+						<a class="tag clickable">#태그2</a>
+					</div>
 				</div>
 			</article>
 		</div>
