--- a/src/main/resources/templates/program/list.html
+++ b/src/main/resources/templates/program/list.html
@@ -82,9 +82,11 @@
 				<!--				<h2>제목</h2>-->
 				<p class="program-to-detail clickable" th:data-programnum="${programList.programNum}" th:text="${programList.content}">콘텐츠</p>
 				<div class="content-article-footer">
-					<p>#태그 #태그 </p>
-					<p>$999,999</p>
-<!--					<p th:text="${programList.price}">price</p>-->
+					<div class="tags">
+						<a class="tag clickable">#태그1</a>
+						<a class="tag clickable">#태그2</a>
+					</div>
+					<p th:text="'₩' + ${programList.price}">price</p>
 				</div>
 			</article>
 		</div>
