--- a/src/main/resources/templates/jk/test.html
+++ b/src/main/resources/templates/jk/test.html
@@ -8,19 +8,10 @@
 <script src="https://cdn.ckeditor.com/4.16.0/standard/ckeditor.js"></script>
 
 <link rel="stylesheet" th:href="@{/css/header_style.css}">
-<link rel="stylesheet" th:href="@{/css/main_style.css}">
+<link rel="stylesheet" th:href="@{/css/main_style_write.css}">
 <link rel="stylesheet" th:href="@{/css/footer.css}">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 <style>
-	input[type="text"], textarea {
-		display: block;
-		margin-bottom: 10px;
-	}
-
-	input[type="text"], textarea {
-		width: 100%;
-		padding: 8px;
-	}
 
 </style>
 </head>
@@ -31,34 +22,63 @@
 
 
 <main>
-	<h2>글쓰기</h2>
-	<form th:action="@{/board/write}" method="post" enctype="multipart/form-data">
+	<h2>프로그램 글쓰기</h2>
+
+	<form th:action="@{/program/write}" method="post" enctype="multipart/form-data">
 		<div>
 			<input type="text" id="title" name="title" placeholder="제목">
 		</div>
 
 		<div>
-			<textarea id="contents" name="contents"></textarea>
+			<textarea id="content" name="content" placeholder="내용"></textarea>
+			<br>
+		</div>
+
+		<div>
+			<input type="text" id="address" name="address" placeholder="주소"></input>
+		</div>
+
+		<div>
+			<input type="text" id="detailed_address" name="detailed_address" placeholder="상세 주소"></input>
+		</div>
+
+		<div>
+			<input type="text" id="price" name="price" placeholder="가격"></input>
+		</div>
+
+		<div>
+			<input type="text" id="start_date" name="start_date" placeholder="시작 날짜"></input>
+		</div>
+
+		<div>
+			<input type="text" id="end_date" name="end_date" placeholder="종료 날짜"></input>
 		</div>
 
 		<br>
+
 		<div class="button-right">
-			<button type="submit">작성</button>
+			<button type="submit">저장</button>
 		</div>
+
 		<div class="button-right">
-			<button type="submit">취소</button>
+			<button type="reset">취소</button>
 		</div>
 	</form>
+
+
+
+	태그 칸도 추가
 </main>
 
 <footer th:replace="layouts/footer::footer"></footer>
 
 <script>
-	CKEDITOR.replace("contents", {
+	CKEDITOR.replace("content", {
 		//filebrowserUploadMethod :'form',
 		uploadUrl: "/image/upload",  // 이게 드래그 드롭을 위한 URL
 		filebrowserUploadUrl:  "/image/upload",
-		height: 500, // 에디터 높이를 500px로 설정
+    	width: '100%',
+		height: 300, // 에디터 높이를 500px로 설정
 	});
 
 </script>
