--- a/src/main/resources/templates/program/write.html
+++ b/src/main/resources/templates/program/write.html
@@ -5,7 +5,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>작성 화면</title>
+
 	<script src="https://cdn.ckeditor.com/4.16.0/standard/ckeditor.js"></script>
+	<script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 
 	<link rel="stylesheet" th:href="@{/css/header_style.css}">
 	<link rel="stylesheet" th:href="@{/css/main_style_write.css}">
@@ -14,6 +16,11 @@
 	<style>
 
 	</style>
+	<script>
+
+
+
+	</script>
 </head>
 <body>
 
@@ -35,7 +42,12 @@
 		</div>
 
 		<div>
-			<input type="text" id="address" name="address" placeholder="주소"></input>
+			<input class ="address" type="text" id="postcode" name="postcode" placeholder="우편번호"></input>
+		</div>
+
+		<div>
+			<input class ="address" type="text" id="address" name="address" placeholder="주소"></input>
+			<input type="text" id="extraAddress" style="display: none;" />
 		</div>
 
 		<div>
@@ -43,7 +55,7 @@
 		</div>
 
 		<div>
-			<input type="text" id="price" name="price" placeholder="가격"></input>
+			<input type="number" class="priceInput" id="price" name="price" placeholder="가격"></input>
 		</div>
 
 		<div>
@@ -80,6 +92,66 @@
     	width: '100%',
 		height: 300, // 에디터 높이를 500px로 설정
 	});
+
+	document.addEventListener('DOMContentLoaded', function() {
+		// 클래스 이름을 기반으로 모든 요소 선택
+		var addressElements = document.querySelectorAll('.address');
+
+		// 각 요소에 이벤트 리스너 추가
+		addressElements.forEach(function(element) {
+			element.addEventListener('click', openAddressSearch);
+		});
+
+	});
+
+	// 카카오 주소입력 API를 사용하는 함수
+	function openAddressSearch() {
+        new daum.Postcode({
+            oncomplete: function(data) {
+                // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
+
+                // 각 주소의 노출 규칙에 따라 주소를 조합한다.
+                // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
+                var addr = ''; // 주소 변수
+                var extraAddr = ''; // 참고항목 변수
+
+                //사용자가 선택한 주소 타입에 따라 해당 주소 값을 가져온다.
+                if (data.userSelectedType === 'R') { // 사용자가 도로명 주소를 선택했을 경우
+                    addr = data.roadAddress;
+                } else { // 사용자가 지번 주소를 선택했을 경우(J)
+                    addr = data.jibunAddress;
+                }
+
+                // 사용자가 선택한 주소가 도로명 타입일때 참고항목을 조합한다.
+                if(data.userSelectedType === 'R'){
+                    // 법정동명이 있을 경우 추가한다. (법정리는 제외)
+                    // 법정동의 경우 마지막 문자가 "동/로/가"로 끝난다.
+                    if(data.bname !== '' && /[동|로|가]$/g.test(data.bname)){
+                        extraAddr += data.bname;
+                    }
+                    // 건물명이 있고, 공동주택일 경우 추가한다.
+                    if(data.buildingName !== '' && data.apartment === 'Y'){
+                        extraAddr += (extraAddr !== '' ? ', ' + data.buildingName : data.buildingName);
+                    }
+                    // 표시할 참고항목이 있을 경우, 괄호까지 추가한 최종 문자열을 만든다.
+                    if(extraAddr !== ''){
+                        extraAddr = ' (' + extraAddr + ')';
+                    }
+                    // 조합된 참고항목을 해당 필드에 넣는다.
+                    document.getElementById("extraAddress").value = extraAddr;
+
+                } else {
+                    document.getElementById("extraAddress").value = '';
+                }
+
+                // 우편번호와 주소 정보를 해당 필드에 넣는다.
+                document.getElementById('postcode').value = data.zonecode;
+                document.getElementById("address").value = addr;
+                // 커서를 상세주소 필드로 이동한다.
+                document.getElementById("detailed_address").focus();
+            }
+        }).open();
+    }
 
 </script>
 </body>
