--- a/src/main/resources/templates/program/write.html
+++ b/src/main/resources/templates/program/write.html
@@ -38,7 +38,7 @@
 
 
 <main>
-	<h2>프로그램 글쓰기</h2>
+	<h2>프로그램 작성</h2>
 
 	<form th:action="@{/program/write}" method="post" enctype="multipart/form-data">
 		<div>
