program html 텍스트 반영

--- a/src/main/resources/templates/program/detail.html
+++ b/src/main/resources/templates/program/detail.html
@@ -32,7 +32,7 @@
 			<th>내용</th>
 		
 			<td>
-				<pre th:text="${program.content}"></pre>
+				<pre th:utext="${program.content}"></pre>
 			</td>
 		</tr>
 		<tr>
