프로그램 작성 체크리스트 추가

--- a/src/main/resources/static/css/header_style.css
+++ b/src/main/resources/static/css/header_style.css
@@ -95,7 +95,19 @@ button:hover {
     background-color: var(--secondary-color); /* 버튼 호버 효과 */
 }
 
-.button-right {
+/* '저장' 버튼에 대한 추가 스타일 (필요한 경우) */
+.btn-save {
+    /* 여기에 '저장' 버튼에 대한 추가 스타일 */
+}
+
+/* '취소' 버튼에 대한 대비되는 스타일 */
+.btn-cancel {
+    background-color: white; /* '취소' 버튼의 배경색 */
+    color: #333; /* '취소' 버튼의 텍스트 색상 */
+    border: 1px solid #aaa;
+}
+
+.right-align {
     text-align: right;
 }
 
