프로그램 작성 체크리스트 추가

--- a/src/main/resources/templates/program/write.html
+++ b/src/main/resources/templates/program/write.html
@@ -78,24 +78,25 @@
 		</div>
 
 		<br>
+
 		<hr>
 
 		<div class="checklist-container">
 			<!-- 프로그램 테마 태그 -->
 			<div>
 				<h3>프로그램 테마</h3>
-				<label><input type="checkbox" name="themeTags" value="활동적">활동적</label>
-				<label><input type="checkbox" name="themeTags" value="창의적">창의적</label>
-				<label><input type="checkbox" name="themeTags" value="힐링">힐링</label>
-				<label><input type="checkbox" name="themeTags" value="전통">전통</label>
-				<label><input type="checkbox" name="themeTags" value="요리체험">요리체험</label>
-				<label><input type="checkbox" name="themeTags" value="뷰">뷰</label>
-				<label><input type="checkbox" name="themeTags" value="시골">시골</label>
-				<label><input type="checkbox" name="themeTags" value="도시">도시</label>
-				<label><input type="checkbox" name="themeTags" value="축제">축제</label>
-				<label><input type="checkbox" name="themeTags" value="드라이브">드라이브</label>
-				<label><input type="checkbox" name="themeTags" value="친목">친목</label>
-				<label><input type="checkbox" name="themeTags" value="한적한">한적한</label>
+				<label><input type="checkbox" name="programTag" value="활동적">활동적</label>
+				<label><input type="checkbox" name="programTag" value="창의적">창의적</label>
+				<label><input type="checkbox" name="programTag" value="힐링">힐링</label>
+				<label><input type="checkbox" name="programTag" value="전통">전통</label>
+				<label><input type="checkbox" name="programTag" value="요리체험">요리체험</label>
+				<label><input type="checkbox" name="programTag" value="뷰">뷰</label>
+				<label><input type="checkbox" name="programTag" value="시골">시골</label>
+				<label><input type="checkbox" name="programTag" value="도시">도시</label>
+				<label><input type="checkbox" name="programTag" value="축제">축제</label>
+				<label><input type="checkbox" name="programTag" value="드라이브">드라이브</label>
+				<label><input type="checkbox" name="programTag" value="친목">친목</label>
+				<label><input type="checkbox" name="programTag" value="한적한">한적한</label>
 			</div>
 
 			<hr>
@@ -103,16 +104,16 @@
 			<!-- 호스트용 체크리스트 -->
 			<div>
 				<h3>호스트용 체크리스트</h3>
-				<label><input type="checkbox" name="themeTags" value="">화장실과 욕실 분리 여부</label>
-				<label><input type="checkbox" name="themeTags" value="">욕조 유무</label>
-				<label><input type="checkbox" name="themeTags" value="">와이파이 유무</label>
-				<label><input type="checkbox" name="themeTags" value="">변압기 유무</label>
-				<label><input type="checkbox" name="themeTags" value="">파자마(잠옷) 제공 여부</label>
-				<label><input type="checkbox" name="themeTags" value="">헤어드라이기 유무</label>
-				<label><input type="checkbox" name="themeTags" value="">기본 세면도구 제공 여부 (수건, 샴푸, 린스, 치약, 칫솔, 바디워시)</label>
-				<label><input type="checkbox" name="themeTags" value="">반려동물 동반 가능 여부</label>
-				<label><input type="checkbox" name="themeTags" value="">방 혼자 사용 가능 여부 및 최대 인원</label>
-				<label><input type="checkbox" name="themeTags" value="">언어 대응 가능 여부 (예: 일본어, 영어)</label>
+				<label><input type="checkbox" name="programTag" value="">화장실과 욕실 분리 여부</label>
+				<label><input type="checkbox" name="programTag" value="">욕조 유무</label>
+				<label><input type="checkbox" name="programTag" value="">와이파이 유무</label>
+				<label><input type="checkbox" name="programTag" value="">변압기 유무</label>
+				<label><input type="checkbox" name="programTag" value="">파자마(잠옷) 제공 여부</label>
+				<label><input type="checkbox" name="programTag" value="">헤어드라이기 유무</label>
+				<label><input type="checkbox" name="programTag" value="">기본 세면도구 제공 여부 (수건, 샴푸, 린스, 치약, 칫솔, 바디워시)</label>
+				<label><input type="checkbox" name="programTag" value="">반려동물 동반 가능 여부</label>
+				<label><input type="checkbox" name="programTag" value="">방 혼자 사용 가능 여부 및 최대 인원</label>
+				<label><input type="checkbox" name="programTag" value="">언어 대응 가능 여부 (예: 일본어, 영어)</label>
 			</div>
 
 			<hr>
@@ -120,14 +121,14 @@
 			<!-- 게스트용 체크리스트 -->
 			<div>
 				<h3>게스트용 체크리스트</h3>
-				<label><input type="checkbox" name="themeTags" value="">반려동물 동반 여부 (체크 시 예약 후 메신저 기능으로 대화)</label>
-				<label><input type="checkbox" name="themeTags" value="">알러지 유무 (체크 시 예약 후 메신저 기능으로 대화)</label>
-				<label><input type="checkbox" name="themeTags" value="">지병 유무 (체크 시 예약 후 메신저 기능으로 대화)</label>
-				<label><input type="checkbox" name="themeTags" value="">기피하는 음식 유무 (선호하는 식단 - 밥, 빵, 상관없음, 생략) (체크 시 예약 후 메신저 기능으로 대화)</label>
-				<label><input type="checkbox" name="themeTags" value="">개인시간 원하는지 여부 (방해받고 싶지 않은 시간: 주관식)</label>
-				<label><input type="checkbox" name="themeTags" value="">선호하는 프로그램 유형 (역사유적지탐방, 현지일상생활, 문화체험, 호스트와 생활)</label>
-				<label><input type="checkbox" name="themeTags" value="">언어대응 가능 여부 (예: 한국어, 영어)</label>
-				<label><input type="checkbox" name="themeTags" value="">흡연 유무 (흡연, 비흡연)</label>
+				<label><input type="checkbox" name="programTag" value="">반려동물 동반 여부 (체크 시 예약 후 메신저 기능으로 대화)</label>
+				<label><input type="checkbox" name="programTag" value="">알러지 유무 (체크 시 예약 후 메신저 기능으로 대화)</label>
+				<label><input type="checkbox" name="programTag" value="">지병 유무 (체크 시 예약 후 메신저 기능으로 대화)</label>
+				<label><input type="checkbox" name="programTag" value="">기피하는 음식 유무 (선호하는 식단 - 밥, 빵, 상관없음, 생략) (체크 시 예약 후 메신저 기능으로 대화)</label>
+				<label><input type="checkbox" name="programTag" value="">개인시간 원하는지 여부 (방해받고 싶지 않은 시간: 주관식)</label>
+				<label><input type="checkbox" name="programTag" value="">선호하는 프로그램 유형 (역사유적지탐방, 현지일상생활, 문화체험, 호스트와 생활)</label>
+				<label><input type="checkbox" name="programTag" value="">언어대응 가능 여부 (예: 한국어, 영어)</label>
+				<label><input type="checkbox" name="programTag" value="">흡연 유무 (흡연, 비흡연)</label>
 			</div>
 
 
