프로그램 작성 체크리스트 추가

--- a/src/main/resources/templates/program/write.html
+++ b/src/main/resources/templates/program/write.html
@@ -85,18 +85,18 @@
 			<!-- 프로그램 테마 태그 -->
 			<div>
 				<h3>프로그램 테마</h3>
-				<label><input type="checkbox" name="programTag" value="활동적">활동적</label>
-				<label><input type="checkbox" name="programTag" value="창의적">창의적</label>
-				<label><input type="checkbox" name="programTag" value="힐링">힐링</label>
-				<label><input type="checkbox" name="programTag" value="전통">전통</label>
-				<label><input type="checkbox" name="programTag" value="요리체험">요리체험</label>
-				<label><input type="checkbox" name="programTag" value="뷰">뷰</label>
-				<label><input type="checkbox" name="programTag" value="시골">시골</label>
-				<label><input type="checkbox" name="programTag" value="도시">도시</label>
-				<label><input type="checkbox" name="programTag" value="축제">축제</label>
-				<label><input type="checkbox" name="programTag" value="드라이브">드라이브</label>
-				<label><input type="checkbox" name="programTag" value="친목">친목</label>
-				<label><input type="checkbox" name="programTag" value="한적한">한적한</label>
+				<label><input type="checkbox" name="active" value="1">활동적</label>
+				<label><input type="checkbox" name="creative" value="1">창의적</label>
+				<label><input type="checkbox" name="healing" value="1">힐링</label>
+				<label><input type="checkbox" name="traditional" value="1">전통</label>
+				<label><input type="checkbox" name="cookingExperience" value="1">요리체험</label>
+				<label><input type="checkbox" name="scenicView" value="1">뷰</label>
+				<label><input type="checkbox" name="countryside" value="1">시골</label>
+				<label><input type="checkbox" name="city" value="1">도시</label>
+				<label><input type="checkbox" name="festival" value="1">축제</label>
+				<label><input type="checkbox" name="drive" value="1">드라이브</label>
+				<label><input type="checkbox" name="socializing" value="1">친목</label>
+				<label><input type="checkbox" name="tranquil" value="1">한적한</label>
 			</div>
 
 			<hr>
@@ -104,16 +104,18 @@
 			<!-- 호스트용 체크리스트 -->
 			<div>
 				<h3>호스트용 체크리스트</h3>
-				<label><input type="checkbox" name="programTag" value="">화장실과 욕실 분리 여부</label>
-				<label><input type="checkbox" name="programTag" value="">욕조 유무</label>
-				<label><input type="checkbox" name="programTag" value="">와이파이 유무</label>
-				<label><input type="checkbox" name="programTag" value="">변압기 유무</label>
-				<label><input type="checkbox" name="programTag" value="">파자마(잠옷) 제공 여부</label>
-				<label><input type="checkbox" name="programTag" value="">헤어드라이기 유무</label>
-				<label><input type="checkbox" name="programTag" value="">기본 세면도구 제공 여부 (수건, 샴푸, 린스, 치약, 칫솔, 바디워시)</label>
-				<label><input type="checkbox" name="programTag" value="">반려동물 동반 가능 여부</label>
-				<label><input type="checkbox" name="programTag" value="">방 혼자 사용 가능 여부 및 최대 인원</label>
-				<label><input type="checkbox" name="programTag" value="">언어 대응 가능 여부 (예: 일본어, 영어)</label>
+				<label><input type="checkbox" name="separateBathroom" value="1">화장실과 욕실 분리 여부</label>
+				<label><input type="checkbox" name="bathtub" value="1">욕조 유무</label>
+				<label><input type="checkbox" name="wifi" value="1">와이파이 유무</label>
+				<label><input type="checkbox" name="transformer" value="1">변압기 유무</label>
+				<label><input type="checkbox" name="pajamasProvided" value="1">파자마(잠옷) 제공 여부</label>
+				<label><input type="checkbox" name="hairdryer" value="1">헤어드라이기 유무</label>
+				<label><input type="checkbox" name="basicToiletriesProvided" value="1">기본 세면도구 제공 여부 (수건, 샴푸, 린스, 치약, 칫솔, 바디워시)</label>
+				<label><input type="checkbox" name="petFriendly" value="1">반려동물 동반 가능 여부</label>
+				<label><input type="checkbox" name="roomAlone" value="1">방 혼자 사용 가능 여부 및 최대 인원</label>
+				<label><input type="checkbox" name="langJapanese" value="1">언어 대응 가능 여부 (일본어)</label>
+				<label><input type="checkbox" name="langEnglish" value="1">언어 대응 가능 여부 (영어)</label>
+				<label><input type="checkbox" name="langKorean" value="1">언어 대응 가능 여부 (한국어)</label>
 			</div>
 
 			<hr>
@@ -121,14 +123,14 @@
 			<!-- 게스트용 체크리스트 -->
 			<div>
 				<h3>게스트용 체크리스트</h3>
-				<label><input type="checkbox" name="programTag" value="">반려동물 동반 여부 (체크 시 예약 후 메신저 기능으로 대화)</label>
-				<label><input type="checkbox" name="programTag" value="">알러지 유무 (체크 시 예약 후 메신저 기능으로 대화)</label>
-				<label><input type="checkbox" name="programTag" value="">지병 유무 (체크 시 예약 후 메신저 기능으로 대화)</label>
-				<label><input type="checkbox" name="programTag" value="">기피하는 음식 유무 (선호하는 식단 - 밥, 빵, 상관없음, 생략) (체크 시 예약 후 메신저 기능으로 대화)</label>
-				<label><input type="checkbox" name="programTag" value="">개인시간 원하는지 여부 (방해받고 싶지 않은 시간: 주관식)</label>
-				<label><input type="checkbox" name="programTag" value="">선호하는 프로그램 유형 (역사유적지탐방, 현지일상생활, 문화체험, 호스트와 생활)</label>
-				<label><input type="checkbox" name="programTag" value="">언어대응 가능 여부 (예: 한국어, 영어)</label>
-				<label><input type="checkbox" name="programTag" value="">흡연 유무 (흡연, 비흡연)</label>
+				<label><input type="checkbox" name="petFriendly" value="1">반려동물 동반 여부 (체크 시 예약 후 메신저 기능으로 대화)</label>
+				<label><input type="checkbox" name="allergyFriendly" value="1">알러지 유무 (체크 시 예약 후 메신저 기능으로 대화)</label>
+				<label><input type="checkbox" name="chronicIllness" value="1">지병 유무 (체크 시 예약 후 메신저 기능으로 대화)</label>
+				<label><input type="checkbox" name="foodPreference" value="1">기피하는 음식 유무 (선호하는 식단 - 밥, 빵, 상관없음, 생략) (체크 시 예약 후 메신저 기능으로 대화)</label>
+				<label><input type="checkbox" name="privateTime" value="1">개인시간 원하는지 여부 (방해받고 싶지 않은 시간: 주관식)</label>
+				<label><input type="checkbox" name="preferredProgramType" value="1">선호하는 프로그램 유형 (역사유적지탐방, 현지일상생활, 문화체험, 호스트와 생활)</label>
+				<label><input type="checkbox" name="languageSupport" value="1">언어대응 가능 여부 (예: 한국어, 영어)</label>
+				<label><input type="checkbox" name="smoking" value="1">흡연 유무 (흡연, 비흡연)</label>
 			</div>
 
 
